test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_pretend_stmt.draco
proc main() void : pretend(a, void); corp;

