test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_make_to_void.draco
proc main() void : a := make(a, void); corp;

